test/files/invalid/bad_include_namespace.fbs
include "helpers/bad_include_namespace_helper.fbs";

namespace Foo;

table Foo {}