test/files/invalid/bad_include_namespace.stderr
[0m[1m[38;5;9merror[0m[1m: Overlapping declarations[0m
  [0m[34m┌─[0m test/files/invalid/bad_include_namespace.fbs:5:1
  [0m[34m│[0m
[0m[34m5[0m [0m[34m│[0m table Foo {}
  [0m[34m│[0m [0m[34m---------[0m [0m[34mfirst definition was here[0m
  [0m[34m│[0m
  [0m[34m┌─[0m test/files/invalid/helpers/bad_include_namespace_helper.fbs:3:1
  [0m[34m│[0m
[0m[34m3[0m [0m[34m│[0m table Foo {}
  [0m[34m│[0m [0m[34m---------[0m [0m[34msecond definition was here[0m

Error: Bailing because of errors
